force-app/main/default/objects/Interview_Slot__c/fields/Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time__c</fullName>
    <formula>Room_Slot__r.Date_and_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date and Time</label>
    <type>DateTime</type>
</CustomField>