force-app/main/default/objects/Interview_Slot__c/fields/Interview__c.field-meta.xml
<CustomField>
    <fullName>Interview__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Please select the interview</inlineHelpText>
    <label>Interview</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipLabel>Interview Slots</relationshipLabel>
    <relationshipName>Interview_Slots</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>