force-app/main/default/objects/Interview_Slot__c/fields/Location_Room__c.field-meta.xml
<CustomField>
    <fullName>Location_Room__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Please select the room for the interview.</inlineHelpText>
    <label>Location Room</label>
    <referenceTo>Location_Room__c</referenceTo>
    <relationshipLabel>Interview Slots</relationshipLabel>
    <relationshipName>Interview_Slots</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>